src/App.css
@import url(//db.onlinewebfonts.com/c/f4d1593471d222ddebd973210265762a?family=Pokemon);
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=VT323&display=swap');


body{
  --header-main: #ffcb05;
  --header-accent: #2a75bb;
  --background: #e5f1ed;
  --text-color: #000000;
  --icon-color: grey;
  --search-list: white;
  --box-shadow: #ddd;
  --card-text-border: #84acfa;
  --card-checkered-light: #c6fdbf;
  --card-checkered-dark: #b9eeb3;

  /* Normal */
  --type-normal: #A8A878;
  /* Fire */
  --type-fire: #F08030;
  /* Water */
  --type-water: #6890F0;
  /* Electric */
  --type-electric: #F8D030;
  /* Grass */
  --type-grass: #78C850;
  /* Ice */
  --type-ice: #98D8D8;
  /* Fighting */
  --type-fighting: #C03028;
  /* Poison */
  --type-poison: #A040A0;
  /* Ground */
  --type-ground: #E0C068;
  /* Flying */
  --type-flying: #A890F0;
  /* Psychic */
  --type-psychic: #F85888;
  /* Bug */
  --type-bug: #A8B820;
  /* Rock */
  --type-rock: #B8A038;
  /* Ghost */
  --type-ghost: #705898;
  /* Dragon */
  --type-dragon: #7038F8;
  /* Dark */
  --type-dark: #705848;
  /* Steel */
  --type-steel: #B8B8D0;
  /* Fairy */
  --type-fairy: #EE99AC;
  background-color: var(--background);
}

body.darkMode{
  --header-main: white;
  --header-accent: #2a75bb;
  --background: #053a15;
  --text-color: white;
  --card-text-border: #84acfa;
  --card-checkered-light: #2ea043;
  --card-checkered-dark: #228636;

  --type-normal: #053a15;
  /* Fire */
  --type-fire: #053a15;
  /* Water */
  --type-water: #053a15;
  /* Electric */
  --type-electric: #053a15;
  /* Grass */
  --type-grass: #053a15;
  /* Ice */
  --type-ice: #053a15;
  /* Fighting */
  --type-fighting: #053a15;
  /* Poison */
  --type-poison: #053a15;
  /* Ground */
  --type-ground: #053a15;
  /* Flying */
  --type-flying: #053a15;
  /* Psychic */
  --type-psychic: #053a15;
  /* Bug */
  --type-bug: #053a15;
  /* Rock */
  --type-rock: #053a15;
  /* Ghost */
  --type-ghost: #053a15;
  /* Dragon */
  --type-dragon: #053a15;
  /* Dark */
  --type-dark: #053a15;
  /* Steel */
  --type-steel: #053a15;
  /* Fairy */
  --type-fairy: #053a15;

}


#root {
  font-family: 'Roboto', sans-serif;
  font-family: 'VT323', monospace;
}


.main-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 5rem;
    padding-left: 1rem;
    padding-right: 1rem;
}

.main-header__title {
    font-family: 'Pokemon', sans-serif;
    font-weight:lighter;
    color: var(--header-main);
    text-shadow:
    -0.09rem -0.1rem 0 var(--header-accent),  
    0.22rem -0.13rem 0 var(--header-accent),
    -0.21rem 0.23rem 0 var(--header-accent),
    0.16rem 0.23rem 0 var(--header-accent);                                  
}

.main-header__button{
  border: none;
  background: none;
  height: min-content;
}

.filter-box {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-left: 1rem;
  padding-right: 1rem;
  margin-top: 2rem;
}

.filter-box__dropdown {
  font-family: Arial, Helvetica, sans-serif;
  z-index: 10;
}

.filter-box__input-box {
  position: relative;
  display: flex;
  align-items: center;
  border: none;
}

.filter-box__input__search-icon {
    position: absolute;
    left: 0.4rem;
    color: var(--icon-color);
}

.filter-box__input-box__input {
    padding: 8px 16px;
    padding-left: 2rem;
    border: 2px solid var(--icon-color);
    border-radius: 10px;
    font-size: 16px;
    width: 25rem;
    height: 1.5rem;
}

.filter-box__input-box__input:hover,
.filter-box__input-box__input:focus {
  border-color: var(--header-accent);
  outline: none;
}

.filter-box__search-container{
  position: relative;
}
.filter-box__results-list{
  background-color: var(--search-list);
  box-shadow: 0px 0px 8px var(--box-shadow);
  border-radius: 10px;
  max-height: 18.75rem;
  width: 25rem; 
  position: absolute; 
  z-index:999; 
  top: 100%; 
  left:1%;  
  overflow: auto;
}

.filter-box__results-single {
  outline: solid var(--text-color) 1px;
  display: flex;
  min-height: 2rem;
  align-items: center;
  padding-left: 1rem;
}

.filter-box__results-single:hover {
  cursor: pointer;
  background-color: var(--icon-color);
}


.card-display__button {
  background-color: #4caf50;
  color: #fff;
  border: none;
  padding: 0.5rem 0.5rem;
  font-size: 16px;
  font-weight: bold;
  border-radius: 4px;
  cursor: pointer;
}

.card-display__button-holder{
  display: flex;
  justify-content: center;
  align-items: center;
}

.card-display__button:hover {
  background-color: #45a049;
}

.card-display__button:active {
  background-color: #3e8e41;
}

.card-display__button:focus {
  outline: none;
  box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.2);
}


.card-display__card-holder {
    min-height: fit-content;
    margin: 2rem;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    border-radius: 10px;
    
}

.card, .card__back {
    border:1px solid black;
    height: 26rem;
    width: 15rem;
    margin: 2rem;
    display: inline-flexbox;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    flex-direction: column;
    border-radius: 20px;
    z-index: 1;
    background-position: 0px 0px, 10px 10px;
    background-size: 20px 20px;
    background-image: 
    linear-gradient(45deg, var(--card-checkered-dark) 25%, transparent 25%, transparent 75%, var(--card-checkered-dark) 75%, var(--card-checkered-dark) 100%),
    linear-gradient(45deg, var(--card-checkered-dark) 25%, var(--card-checkered-light) 25%, var(--card-checkered-light) 75%, var(--card-checkered-dark) 75%, var(--card-checkered-dark) 100%);
    padding-left: 2%;
    padding-right: 2%;
    border: 4px solid #ffe266;
    transition: all .2s ease-in-out;
    cursor: pointer;
}


.card__back {
  background-color: var(--header-accent);
  background-image: url('./assets/backPkmnCard.jpg');
  background-repeat: no-repeat;
  background-size: 100% 26rem;

}

.card:hover, .card__back:hover {
  transform: scale(1.1);
}
.card__header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #fdfdc4;
    height: 3rem;
    margin-bottom: 1rem;
    margin-top: 1rem;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    border-radius: 15px;
}

.card__header__name {
    font-size:x-large
}


.card__img:after {
    content: '';
    position: absolute;
    top: -10px;
    left: -10px;
    right: -10px;
    bottom: -10px;
    background: #c0b262;
    z-index: -2;
    border-radius: 15px;
  }

  .card__img:before {
    content: '';
    position: absolute;
    top: -7px;
    left: -7px;
    right: -7px;
    bottom: -7px;
    background: #fcf9c9;
    z-index: -1;
    border-radius: 15px;
  }




.card__img {
    display: flex;
    align-items: center;
    justify-content: center;
    background-image: linear-gradient(to bottom, #f7f8fc 50%, #fefffa 50%);
    background-blend-mode: normal, difference, normal;
    background-size: 2em 2em;

    position: relative;
    border: 4px solid #b0cb9d;
    border-radius: 15px;
    margin-bottom: 1rem;
    
}

.card__header__types{
    display: flex;
}

.water,
.fire,
.electric,
.grass,
.ice,
.fighting,
.poison,
.ground,
.flying,
.psychic,
.bug,
.rock,
.ghost,
.dragon,
.dark,
.steel,
.fairy,
.normal {
    border:1px solid black;
    border-radius: 3px;
    display: flex;
    justify-content: center;
    color: white;
    font-size: larger;
}

.water {
    background-color: var(--type-water);
}
.fire {
    background-color: var(--type-fire);
  }
  
  .electric {
    background-color: var(--type-electric);
  }
  
  .grass {
    background-color: var(--type-grass);
  }
  
  .ice {
    background-color: var(--type-ice);
  }
  
  .fighting {
    background-color: var(--type-fighting);
  }
  
  .poison {
    background-color: var(--type-poison);
  }
  
  .ground {
    background-color: var(--type-ground);
  }
  
  .flying {
    background-color: var(--type-flying);
  }
  
  .psychic {
    background-color: var(--type-psychic);
  }
  
  .bug {
    background-color: var(--type-bug);
  }
  
  .rock {
    background-color: var(--type-rock);
  }
  
  .ghost {
    background-color: var(--type-ghost);
  }
  
  .dragon {
    background-color: var(--type-dragon);
  }
  
  .dark {
    background-color: var(--type-dark);
  }
  
  .steel {
    background-color: var(--type-steel);
  }
  
  .fairy {
    background-color: var(--type-fairy);
  }

  .normal {
    background-color: var(--type-normal);
  }

  .card__stats{
    display: flex;
    flex-direction: column;
    z-index: 15;
    margin-bottom: 1rem;
  }
  .card__stats-single {
    display: flex;
    flex-direction: row;
    align-items: center;
    height: 1rem;
    justify-content: space-between;
    color: var(--text-color);
  }

  .card__flavor-text{
    border: 4px solid var(--card-text-border);
    background-color: var(--background);
    border-radius: 1rem;
    padding-left: 0.25rem;
    color: var(--text-color);
  }

